# antd-admin

./: .env.example  .gitattributes  .gitignore  .prettierrc  AGENTS.md  CMakeLists.txt  README.md  biome.json  package-lock.json  package.json  tsconfig.json  tsconfig.service.json  vcpkg.json  vite-env.d.ts  vite.config.ts
service/: server.cpp  server.ts
service/common/: http.h  http.ts  request.h  request.ts  types.h  types.ts
service/config/: data.h  data.ts  paths.h  schema.h
service/core/: env.ts  hono.env.ts
service/middleware/: auth.h  auth.ts  logger.h  permission.h  permission.ts
service/modules/common/: http.ts  types.ts
service/modules/data/: data.entity.ts  device.entity.ts  variable-history.entity.ts  variable-realtime.entity.ts  variable.entity.ts
service/modules/system/auth/: auth.controller.h  auth.error.h  auth.error.ts  auth.middleware.ts  auth.route.ts  auth.schema.h  auth.schema.ts  auth.service.h  auth.service.ts  auth.types.h  auth.types.ts  permission.middleware.ts  permission.service.ts  rate-limit.service.ts
service/modules/system/department/: department.entity.ts  department.error.ts  department.route.ts  department.schema.ts  department.service.ts  department.types.ts
service/modules/system/dept/: dept.controller.h  dept.error.h  dept.schema.h  dept.service.h  dept.types.h
service/modules/system/menu/: menu.controller.h  menu.entity.ts  menu.error.h  menu.error.ts  menu.route.ts  menu.schema.h  menu.schema.ts  menu.service.h  menu.service.ts  menu.types.h  menu.types.ts
service/modules/system/role/: role.controller.h  role.entity.ts  role.error.h  role.error.ts  role.route.ts  role.schema.h  role.schema.ts  role.service.h  role.service.ts  role.types.h  role.types.ts
service/modules/system/user/: user.controller.h  user.entity.ts  user.error.h  user.error.ts  user.route.ts  user.schema.h  user.schema.ts  user.service.h  user.service.ts  user.types.h  user.types.ts
service/utils/: bcrypt.ts  jwt.h  jwt.ts  logger.h  logger.ts  password.h  tree.ts
web/: index.html
web/components/: Breadcrumb.tsx  DynamicIcon.tsx  PageTabs.tsx
web/config/: app.ts
web/hooks/: useDynamicRoutes.ts  useInitAuth.ts  useMutation.ts  usePermission.ts
web/layouts/: AdminLayout.tsx
web/pages/: index.ts
web/pages/home/: index.tsx
web/pages/login/: index.tsx  login.api.ts  login.hooks.ts  login.queries.ts  login.service.ts  login.types.ts
web/pages/system/department/: department.api.ts  department.queries.ts  department.schema.ts  department.service.ts  department.types.ts  index.tsx
web/pages/system/dept/: dept.api.ts  dept.schema.ts  dept.service.ts  dept.types.ts  index.tsx
web/pages/system/menu/: index.tsx  menu.api.ts  menu.queries.ts  menu.schema.ts  menu.service.ts  menu.types.ts
web/pages/system/role/: index.tsx  role.api.ts  role.schema.ts  role.service.ts  role.types.ts
web/pages/system/user/: index.tsx  user.api.ts  user.schema.ts  user.service.ts  user.types.ts
web/providers/: Message.tsx
web/routes/: index.tsx
web/store/: authStore.ts  tabsStore.ts
web/styles/: index.css
web/utils/: animations.ts  http.ts  icon.tsx  query.ts  tree.ts
